Add verification for delete users, update docs
