# src/routes/user.js
@@ -17,7 +17,6 @@ router.post('/', create)
 router.get('/', validateAuthentication, getAll)
 router.get('/:id', validateAuthentication, getById)
 router.patch('/:id', validateAuthentication, validateTeacherRole, updateById)
-// TODO: validate
-router.delete('/:id', deleteById)
+router.delete('/:id', validateAuthentication, validateTeacherRole, deleteById)
 
 export default router
